[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.7", features=["derive"]}
criterion = "0.3.6"
rand = "0.8.5"
serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0.82"
sled = "0.34.7"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
