[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.7", features=["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0.82"
sled = "0.34.7"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.3.6"
predicates = "1.0.0"
rand = {version="0.8.5", features=["small_rng"]}
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false